# eudic-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
eudic_mcp/: __init__.py  client.py  server.py
