[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eudic-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Eudic study list API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "eudic-mcp contributor" },
]
keywords = ["mcp", "eudic", "studylist", "flashcards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
eudic-mcp = "eudic_mcp.server:main"

[project.urls]
Homepage = "https://github.com/safeblood/eudic-mcp"
Repository = "https://github.com/safeblood/eudic-mcp"
Issues = "https://github.com/safeblood/eudic-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["eudic_mcp"]
